# py-properties

./: .gitignore  LICENSE  README.md  setup.cfg
