[metadata]
name = py-properties
version = 0.0.1-alpha
description = Python library to parse a .properties file
long_description = file: README.md
long_description_content_type = text/markdown
author = Priyak Dey
author_email = priyak1991dey@gmail.com
url = https://github.com/priyakdey/py-properties
license = MIT
license_file = LICENSE


[options]
packages = find:
python_requires = >=3.6


[options.packages.find]
exclude =
    tests*
